--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.projectName=PuzzleGame
 sonar.projectVersion=1.0
 
 # path to source directories (required)
-sources=
+sources= puzzleGame / src
 
 # path to test source directories (optional)
 #tests=GameTest
